--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -6,7 +6,7 @@
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #000000;
-    font-size: 36pt;
+    font-size: 42pt;
     text-decoration: none;
 }
 
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Staatliches', serif;
+    font-family: 'Didact Gothic';
 }
 
 .date {
