--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,11 +1,12 @@
 {% load static %}
 <html>
     <head>
-        <title>Gaia's Moon</title>
+        <title>Moonbeam</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="shortcut icon" type="image/jpg" href="img/Blue_Moon.jpg">
     </head>
     <body>
         <div class="page-header">
@@ -16,7 +17,7 @@
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-            <h1><a href="/">Gaia's Moon</a></h1>
+            <h1><a href="/">Moonbeam</a></h1>
         </div>        
         <div class="content container">
             <div class="row">
