--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <link rel = "icon" href = "favicon.png"> 
     </head>
     <body>
         <div class="page-header">
