--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -9,6 +9,8 @@
     color: #000000;
     font-size: 42pt;
     text-decoration: none;
+    text-align: center;
+    padding: 100px;
 }
 
 .content {
