--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -6,11 +6,11 @@
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #000000;
-    font-size: 42pt;
+    color: #ffffff;
+    font-size: 80pt;
     text-decoration: none;
     text-align: center;
-    padding: 100px;
+    padding: 200px;
 }
 
 .content {
