--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -10,17 +10,15 @@
     font-size: 80pt;
     text-decoration: none;
     text-align: center;
-    padding: 200px;
+    padding: 100px, 100px, 40px, 100px;
 }
 
-.page-header p, {
+.page-header p, .page-header p a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 20pt;
-    text-decoration: none;
+    font-size: 30pt;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
 }
-
 .content {
     margin-left: 40px;
 }
