--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,15 +7,15 @@
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 80pt;
+    font-size: 100pt;
     text-decoration: none;
     text-align: center;
     padding: 100px, 100px, 40px, 100px;
 }
 
-.page-header p, .page-header p a, .page-header h1 a:visited, .page-header h1 a:active {
+.page-header p, .page-header p a, .page-header p a:visited, .page-header p a:active {
     color: #ffffff;
-    font-size: 30pt;
+    font-size: 20pt;
     text-align: center;
     padding: 20px;
 }
