--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,8 +1,8 @@
 .page-header {
     background-color: #164155;
-    margin-top: 0;
+    margin-top: 100px;
     text-align: center;
-    padding: 100px, 100px, 40px, 100px;
+    padding: 100px, 100px, 100px, 100px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
