--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
                 <h1><a href="/">Moonbeam</a></h1>
-                <p>A natural business</p>
+                <p>A natural bakery</p>
         </div>        
         <div class="content container">
             <div class="row">
