--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -2,13 +2,13 @@
     <a class="navbar-brand" href="#">Navbar</a>
     <div id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'index' %}">Home</a>
+        <li class="nav-item {{ our_mission_page }}">
+          <a class="nav-link" href="{% url 'our_mission' %}">Our_Mission</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {{ about_page }}">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item {{ contact_page }}">
           <a class="nav-link" href="{% url 'contact' %}">Contact</a>
         </li>
       </ul>
