--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,8 +17,8 @@
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-                <h1><a href="/">Moonbeam</a></h1>
-                <p>A natural bakery</p>
+                <h1><a href="/">The Moonbeam Bakery</a></h1>
+                <p>A natural delight</p>
         </div>        
         <div class="content container">
             <div class="row">
