--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,16 +10,16 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top navbar-light">
+        <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a class="navbar-brand" href="#">WebSiteName</a>
+                <a class="navbar-brand" href="#">Moonbeam</a>
               </div>
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
+                <li><a href="#">Our Mission</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
             </div>
         </nav>          
