--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,20 +6,23 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light">
+        <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd">
             <div class="container-fluid">
               <div class="navbar-header">
                 <a class="navbar-brand" href="#">Moonbeam</a>
               </div>
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Our Mission</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="active"><a href="#">H O M E</a></li>
+                <li><a href="#">M I S S I O N</a></li>
+                <li><a href="#">P R O D U C T S</a></li>
+                <li><a href="#">C O N T A C T</a></li>
               </ul>
             </div>
         </nav>          
