--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,8 +1,8 @@
 .page-header {
     background-color: #164155;
     margin-top: 0px;
-    text-align: center;
     padding: 200px;
+    text-align: center;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -17,7 +17,6 @@
     color: #ffffff;
     font-size: 20pt;
     text-align: center;
-    padding: 20px;
 }
 .content {
     margin-left: 40px;
@@ -83,3 +82,8 @@ p {
     background-color: #f8ca4d;
     font-size: 20pt;
 }
+
+.navbar .nav .active a:hover, .navbar .nav a:hover{
+    color: #f8ca4d
+}
+    
