--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,7 +1,7 @@
 .page-header {
     background-color: #164155;
     margin-top: 0px;
-    padding: 200px;
+    padding: 400px, 10px, 200px, 10px;
     text-align: center;
 }
 
@@ -10,7 +10,7 @@
     font-size: 100pt;
     text-decoration: none;
     text-align: center;
-    padding: 200px;
+    padding-top: 200px;
 }
 
 .page-header p, .page-header p a, .page-header p a:visited, .page-header p a:active {
@@ -33,6 +33,7 @@ h2, h3, h4 {
 .page-header p {
     font-family: 'Montserrat', sans-serif;
     color: #f8ca4d;
+    padding-bottom: 50px;
 }
 
 p {
@@ -70,21 +71,19 @@ p {
     margin: 20px 0px 20px 20px;
 }
 
-.navbar .nav li a{ 
+.navbar .nav { 
     font-family: 'Raleway', sans-serif;
     font-size: 12pt;
-    color: #df4e49;
-}
-
-.navbar .navbar-header a {
-    font-family: 'Dancing Script', cursive;
-    color: #164155;
-    background-color: #f8ca4d;
-    font-size: 20pt;
-}
-
-.navbar .nav .active a:hover, .navbar .nav a:hover{
-    background-color: #f8ca4d;
     color: #164155;
 }
-    
+
+.navbar {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
+    padding: 10px !important;
+}
+
+.navbar-brand {
+    font-family: 'Montserrat', sans-serif;
+}
