linked a page to the profile section

--- a/blog/templates/blog/mission.html
+++ b/blog/templates/blog/mission.html
@@ -21,14 +21,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#"> H O M E <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#">H O M E <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'profile' %}"> P R O F I L E</a>
+                  <a class="nav-link" href="#">M I S S I O N</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    P R O D U C T S</a> 
+                    P R O D U C T S
+                  </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
@@ -46,24 +47,8 @@
               </form>
             </div>
         </nav>
-        <div class="page-header">
-            {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-                <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-            {% else %}
-                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-            {% endif %}
-                <h1><a href="/">Moonbeam</a></h1>
-                <p>A natural delight</p>
-        </div>        
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                {% block content %}
-                {% endblock %}
-                </div>
-            </div>
+        <div>
+            
         </div>
         <footer class="container-fluid text-center">
             <div class="col-sm-4">
