--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -1,8 +1,9 @@
+{% extends 'blog/base.html' %}
 {% load static %}
 
 <html>
     <head>
-        <title>The Moonbeam Bakery</title>
+        <title>Moonbeam</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -54,33 +55,9 @@
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-                <h1><a href="/">Moonbeam</a></h1>
+                <p>Moonbeam</p>
                 <p>A natural delight</p>
-        </div>        
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                {% block content %}
-                {% endblock %}
-                </div>
-            </div>
-        </div>
-        <footer class="container-fluid text-center">
-            <div class="col-sm-4">
-                <h3>Contact Us</h3>
-                <br>
-                <h4> Our address and contact info here.</h4>
-            </div>
-            <div class="col-sm-4">
-                <h3>Connect</h3>
-                <a href="#yourlinkhere" fa fa-facebook"></a>
-                <a href="#yourlinkhere" fa fa-google"></a>
-                <a href="#yourlinkhere" fa fa-twitter"></a>
-            </div>
-            <div class="col-sm-4">
-                <img src="img/b.png" class="icon">
-            </div>
-        </footer>
+
         
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
