fixed the home page no dropdown for shop at the moment

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -34,14 +34,15 @@
               <a class="nav-link" href="{% url 'profile' %}"> A B O U T</a>
               </li>
               <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  S H O P</a> 
+              <a class="nav-link" href="{% url 'shop' %}">S H O P</a> 
+              <!-- DROPDOWN MENU STUFF FOR PRODUCTS. YOU ALSO HAVE TO ADD SOME STUFF ABOVE
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Action</a>
                   <a class="dropdown-item" href="#">Another action</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Something else here</a>
               </div>
+              -->
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#">C O N T A C T</a>
