--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,16 +1,16 @@
 .page-header {
     background-color: #164155;
     margin-top: 0px;
-    padding: 400px, 10px, 200px, 10px;
+    padding-top: 25px;
     text-align: center;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 100pt;
+    font-size: 70pt;
     text-decoration: none;
     text-align: center;
-    padding-top: 200px;
+    padding-top: 25px;
 }
 
 .page-header p, .page-header p a, .page-header p a:visited, .page-header p a:active {
@@ -46,6 +46,7 @@ h2, h3, h4 {
 
 p {
     font-family: 'Montserrat', sans-serif;
+    padding-left: 5px;
 }
 
 .date {
@@ -105,6 +106,12 @@ p {
 
 }
 
-body { padding-top: 60px; }
+body { 
+    padding-top: 60px;
 
-header { padding-top: 60px; }
+}
+
+header { 
+    padding-top: 5px; 
+
+}
