--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,112 @@
+
+
+/* carousel */
+.carousel {
+    /* any dimensions are fine, it can be responsive with max-width */
+    width: 100%;
+    height: ;
+    transition: transform 5s ease, opacity 3s ease-out;
+}
+
+.carousel-inner {
+    /* make sure your .items will get correct height */
+    height: 100%;
+}
+
+.carousel-item {
+    position: relative !important;
+    background-size: cover;
+    background-position: 50% 50%;
+    width: 100%;
+    height: 100%;
+    
+}
+
+.carousel-item::after {
+    content:"";
+    display:block;
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    background:rgba(224, 224, 224, 0.726);
+  }
+
+
+.carousel .item img {
+    visibility: hidden;
+    width: 100%;
+}
+
+.item{
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+
+}
+
+.black-overlay{
+    position: absolute;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.carousel-caption{
+    text-align: center;
+    vertical-align: middle;
+    top: 50%;
+    transform: translateY(-50%);
+    bottom: initial;
+}
+
+.carousel-item h1{
+    font-size: 70pt;
+    color: #ffffff;
+
+}
+.div .container{
+    width: 25rem;
+}
+
+
+.overlay { 
+    color:rgb(0, 0, 0);
+    position: absolute;
+    z-index:12;
+    left:22%;
+    top: 20%;
+    width:57vw;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.overlay h1{
+    font-size: 15rem;
+    color: #ffffff;
+    text-align: center;
+    border-bottom: 1px #ffffff;
+}
+
+.overlay p{
+    font-size: 5rem;
+    color: #e9af0f;
+    padding: 0;
+    margin: 0;
+    text-shadow: #164155;
+    text-align: center;
+
+}
+
+/* end carousel */
+
+
 .page-header {
     background-color: #164155;
     margin-top: 0px;
@@ -17,6 +126,9 @@
     color: #ffffff;
     font-size: 20pt;
     text-align: center;
+    padding: 0;
+    margin: 0;
+
 }
 
 .sub-page-header h3 {
@@ -40,7 +152,7 @@ h2, h3, h4 {
 
 .page-header p {
     font-family: 'Montserrat', sans-serif;
-    color: #f8ca4d;
+    color: #e9af0f;
     padding-bottom: 50px;
 }
 
@@ -91,6 +203,7 @@ p {
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
     padding: 10px !important;
+    opacity: 0.95;
 }
 
 .navbar-brand {
@@ -111,7 +224,18 @@ body {
 
 }
 
-header { 
-    padding-top: 5px; 
-
-}
+.btn {
+    position: relative;
+  }
+  .btn-overlay {
+      position: absolute;
+      padding: 0;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #ffffff;
+      opacity: 0.5;
+      transition: opacity .5s;
+  }
+  
