--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,9 +16,9 @@
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-      <script src="java/blog.js"></script>
+      <link rel="stylesheet" href="{% static 'js/blog.js' %}">
       <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-  </head>
+    </head>
 
     <!-- NAVBAR SECTION IS BELOW-->
 
@@ -61,46 +61,67 @@
       </nav>
 
       <!-- DEAD LOGIN FOR BLOG POSTING FROM DJANGOGIRLS TUTORIAL SECTION IS BELOW-->
+      <header>
+        <div class="page-header">
+          {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><span class=""></span></a>
+          <a href="{% url 'post_draft_list' %}" class="top-menu"><span class=""></span></a>
+          <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+          {% else %}
+            <a href="{% url 'login' %}" class="top-menu"><span class=""></span></a>
+          {% endif %}
+        </div>
+      </header>
 
-      <div class="page-header">
-        {% if user.is_authenticated %}
-        <a href="{% url 'post_new' %}" class="top-menu"><span class=""></span></a>
-        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class=""></span></a>
-        <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-        {% else %}
-          <a href="{% url 'login' %}" class="top-menu"><span class=""></span></a>
-        {% endif %}
-        <h1><a href="/">Moonbeam</a></h1>
-        <p>A natural delight</p>
+  <!-- carousel -->
+      <div class="container">
+        <div class="overlay">
+          <h1 style="font-size:14vw;">Moonbeam</h1>
+          <p style="font-size:4vw;">A natural delight</p>
+        </div>
       </div>
-      <div class="sub-page-header">
-        <h1>Landing Page</h1>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="3800">
+            <img class="d-block w-100" src="{% static 'blog/images/flower_mooncake.jpg' %}" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="3800" data-interval="">
+            <img class="d-block w-100" src="{% static 'blog/images/black_filling_mooncake.jpg' %}" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+          <div class="carousel-item" data-interval="3800">
+            <img class="d-block w-100" src="{% static 'blog/images/green_tea_mooncake.jpg' %}" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+            </div>
+          </div>
+        </div>
+
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only btn-overlay">Next</span>
+        </a>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only btn-overlay">Previous</span>
+        </a>
       </div>
-  
-      <!-- FOOTER SECTION IS BELOW-->
-    <!-- FOOTER IS NOT READY YET:
-      <footer class="container-fluid text-center">
-          <div class="col-sm-4">
-              <h3>Contact Us</h3>
-              <br>
-              <h4> Our address and contact info here.</h4>
-          </div>
-          <div class="col-sm-4">
-              <h3>Connect</h3>
-              <a href="#yourlinkhere" fa fa-facebook"></a>
-              <a href="#yourlinkhere" fa fa-google"></a>
-              <a href="#yourlinkhere" fa fa-twitter"></a>
-          </div>
-          <div class="col-sm-4">
-              <img src="img/b.png" class="icon">
-          </div>
-      </footer>
-    -->
+
+
+<!-- end carousel -->
 
   <!-- BOOTSTRAP FILES THAT MUST GO IN THIS ORDER DIRECTLY BEFORE </body> SECTION IS BELOW-->
-
+      <script src="blog.js"></script>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>        
   </body>    
 </html>
+
